modified html & css file and new html and css file

--- a/HTMLDEMO.html
+++ b/HTMLDEMO.html
@@ -17,7 +17,7 @@
 <center><hr class="hr"></center>
         </div>
 <ul>
-	 <li style="border-right: 1px solid black;"><a href="#"> Home</a></li>
+	 <li style="border-right: 1px solid black;"><a href="home.html"> Home</a></li>
 	<li style="border-right: 1px solid black;"><a href="#">Tutorials</a></li>
      <li style="border-right: 1px solid black;"><a href="#">Testpage</a></li>
         <li><a href="#">About us</a></li>
