modified html and css file

--- a/home.html
+++ b/home.html
@@ -7,6 +7,14 @@
 </head>
 <body>
 <div class="tabd">
-<a href="#" class="tab" >Introduction</a>
+<a href="#" class="tab tcolor1" >Introduction</a>
+<a href="#" class="tab tcolor2" >definition</a>
+<a href="#" class="tab tcolor3" >HTML basic</a>
+<a href="#" class="tab tcolor4" >HTML tags</a>
+<a href="#" class="tab tcolor5" >HTML form</a>
+<a href="#" class="tab tcolor6" >HTML media</a>
+<a href="#" class="tab tcolor7" >HTML graphic</a>
+<a href="#" class="tab tcolor8"  >HTML references</a>
+<a href="#" class="tab tcolor9" >HTML test</a>
 </div>
 </body>
