--- a/homepage.html
+++ b/homepage.html
@@ -17,17 +17,17 @@
 <center><hr class="hr"></center>
         </div>
 <ul>
-	 <li style="border-right: 1px solid black;"><a href="home.html"> Home</a></li>
-	<li style="border-right: 1px solid black;"><a href="#">Tutorials</a></li>
-     <li style="border-right: 1px solid black;"><a href="#">Testpage</a></li>
+	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="homepage.html"> Home</a></li>
+	<li style="border-right: 1px solid #fffdfd;"><a href="tutorial.html">Tutorials</a></li>
+     <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Testpage</a></li>
         <li><a href="#">About us</a></li>
 	</ul>
-	< class="space">
+
 	<div class="head2">
 	 <h2><center>LEARN TO CODE </center></h2>
 </div>
 <div class="p2">
-<p><center><b> everything in self-paced.</b></center></p>
+<p><center><b> [everything in self-paced.]</b></center></p>
 </div> 
 <div class="searchbox">
  <center> <form action="/action-page.php"> 
@@ -40,9 +40,9 @@
 <br>
 <br>
 </div>
-<svg style="background-color:#D9EEE1;" width="100%" height="30%" 
+<svg style="background-color:#076b56;" width="100%" height="30%" 
 viewBox="0 0 100 100" preserveAspectRatio="none">
-	<path id="wavepath" d="M0,0  L110,0 C35,150 35,0 0,100 z" fill="#282A35"></path>
+	<path id="wavepath" d="M0,0  L110,0 C35,150 35,0 0,100 z" fill="#ffff"></path>
   </svg>
   
 </body>
