--- a/tutorial.html
+++ b/tutorial.html
@@ -6,6 +6,21 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body >
+<div class="tutorialbg">
+<div class="tutorialhead">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_b1biQ1cspzClA_8K6EMv1nWkGMfRHhzDCQ&usqp=CAU">
+    <h1>CODE schoolz</h1>
+</div>
+<center>
+    <hr class="hrt">
+</center>
+<ul class="ult">
+    <li> <a style="border-right: 1px solid #fffdfd;" href="homepage.html">Home</a></li>
+    <li> <a style="border-right: 1px solid #fffdfd;" href="tutorial.html">Tutorials</a></li>
+    <li> <a style="border-right: 1px solid #fffdfd;" href="#">Test page</a></li>
+    <li> <a href="#">About us</a></li>
+</ul>
+</div>
 <div class="tutorialbody">
 <div class="tabd">
 <a href="#" class="tab tcolor1" >Introduction</a>
