--- a/homepage.html
+++ b/homepage.html
@@ -20,6 +20,7 @@
 	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="homepage.html"> Home</a></li>
 	<li style="border-right: 1px solid #fffdfd;"><a href="tutorial.html">Tutorials</a></li>
      <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Testpage</a></li>
+	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Login</a></li>
         <li><a href="#">About us</a></li>
 	</ul>
 
