--- a/tutorial.html
+++ b/tutorial.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>home page</title>
+<title>tutorialpage</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body >
@@ -18,7 +18,8 @@
     <li> <a style="border-right: 1px solid #fffdfd;" href="homepage.html">Home</a></li>
     <li> <a style="border-right: 1px solid #fffdfd;" href="tutorial.html">Tutorials</a></li>
     <li> <a style="border-right: 1px solid #fffdfd;" href="#">Test page</a></li>
-    <li> <a href="#">About us</a></li>
+    <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Login</a></li>
+     <li> <a href="#">About us</a></li>
 </ul>
 </div>
 <div class="tutorialbody">
