--- a/aboutus.html
+++ b/aboutus.html
@@ -11,12 +11,18 @@
 	<div class="aboutuspage">
 	<div class="display">
 	<img class="bga" src="images/aboutus.jpg">
-	<div class="aboutpara">
+    <div class="aboutpara">
 	<h1 class="h1a">About Us</h1> 
 	<hr class="hra">
 	<br>
 	<p class="pa">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nulla quos beatae error consequatur officiis labore harum quisquam incidunt temporibus ipsam nemo modi sapiente voluptatum saepe asperiores, rem numquam totam nobis. Excepturi molestias, minima quaerat omnis beatae rem qui voluptas unde ea vero hic perspiciatis harum voluptates corrupti perferendis consequuntur maxime incidunt sequi eaque magnam praesentium deleniti sed. Rem, repudiandae.
 	</p>
+	<br>
+	<div class="icona">	
+	<img class="instaicon" src="images/instagram (1).png" alt="Favicon">
+    <img  class="fbicon" src="images/facebook.png" alt="Favicon">
+	</div>
+	</div>
 	</div>
 	</div>
 	
