--- a/tutorial.html
+++ b/tutorial.html
@@ -19,7 +19,7 @@
     <li> <a style="border-right: 1px solid #fffdfd;" href="tutorial.html">Tutorials</a></li>
     <li> <a style="border-right: 1px solid #fffdfd;" href="#">Test page</a></li>
     <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Login</a></li>
-     <li> <a href="#">About us</a></li>
+     <li> <a href="aboutus.html">About us</a></li>
 </ul>
 </div>
 <div class="tutorialbody">
