--- a/aboutus.html
+++ b/aboutus.html
@@ -12,17 +12,25 @@
 	<div class="display">
 	<img class="bga" src="images/aboutus.jpg">
     <div class="aboutpara">
-	<h1 class="h1a">About Us</h1> 
+		<div class="icona">	
+			<img class="instaicon" src="images/instagram (1).png" alt="Favicon">
+			<img  class="fbicon" src="images/facebook.png" alt="Favicon">
+			<img  class="fbicon" src="images/twitter.png" alt="Favicon">
+			<h1 class="h1a">ABOUT FORUM</h1> 
+        </div>
 	<hr class="hra">
 	<br>
-	<p class="pa">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nulla quos beatae error consequatur officiis labore harum quisquam incidunt temporibus ipsam nemo modi sapiente voluptatum saepe asperiores, rem numquam totam nobis. Excepturi molestias, minima quaerat omnis beatae rem qui voluptas unde ea vero hic perspiciatis harum voluptates corrupti perferendis consequuntur maxime incidunt sequi eaque magnam praesentium deleniti sed. Rem, repudiandae.
+	<p class="pa">CODE schoolz is optimized for learning and training. Examples might be simplified to improve reading and learning.
+		Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness
+		of all content. While using W3Schools, you agree to have read and accepted our <a class="terms" href="#" >terms of use, cookie and privacy policy.</a>
 	</p>
+	<p class="pa2">Copyright 1999-2024 by @ Data. All Rights Reserved. CODE Schoolz is Powered by CODE Schoolz.CSS.</p>
 	<br>
-	<div class="icona">	
-	<img class="instaicon" src="images/instagram (1).png" alt="Favicon">
-    <img  class="fbicon" src="images/facebook.png" alt="Favicon">
-	</div>
-	</div>
+	<br>
+	<br>
+	<br>
+	<p class="pa1">If you want to create your own website, check out  <a class="a1" href="homepage.html">CODE schoolz.</a></p>
+    </div>
 	</div>
 	</div>
 	
