--- a/aboutus.html
+++ b/aboutus.html
@@ -33,6 +33,10 @@
     </div>
 	</div>
 	</div>
+	<div class="bottomhead">
+	<img class="bottomlogo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_b1biQ1cspzClA_8K6EMv1nWkGMfRHhzDCQ&usqp=CAU">
+	<h2 class="h2a">CODE schoolz</h2>
+	</div>	
 	
 	
 </body>
