--- a/aboutus.html
+++ b/aboutus.html
@@ -37,6 +37,17 @@
 	<img class="bottomlogo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_b1biQ1cspzClA_8K6EMv1nWkGMfRHhzDCQ&usqp=CAU">
 	<h2 class="h2a">CODE schoolz</h2>
 	</div>	
+	<hr class="hra1">
+	<ul class="ula" >
+		<li><a class="liaa" href="homepage.html"> Home</a></li>
+	    <li><a class="liaa" href="tutorial.html">Tutorials</a></li>
+		<li><a class="liaa" href="#">Testpage</a></li>
+		<li><a class="liaa" href="#">Login</a></li>
+		<li><a class="liaa" href="aboutus.html">About us</a></li>
+	   </ul>
+   
+
+	
 	
 	
 </body>
