--- a/homepage.html
+++ b/homepage.html
@@ -16,12 +16,12 @@
         </div>
 <center><hr class="hr"></center>
         </div>
-<ul>
-	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="homepage.html"> Home</a></li>
-	<li style="border-right: 1px solid #fffdfd;"><a href="tutorial.html">Tutorials</a></li>
-     <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Testpage</a></li>
-	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Login</a></li>
-        <li><a href="aboutus.html">About us</a></li>
+<ul class="ulh">
+	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lih" href="homepage.html"> Home</a></li>
+	<li style="border-right: 1px solid #fffdfd;"><a class="lih" href="tutorial.html">Tutorials</a></li>
+     <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lih" href="#">Testpage</a></li>
+	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lih" href="#">Login</a></li>
+        <li><a class="lih" href="aboutus.html">About us</a></li>
 	</ul>
 
 	<div class="head2">
