--- a/tutorial.html
+++ b/tutorial.html
@@ -8,31 +8,44 @@
 <body >
 <div class="tutorialbg">
 <div class="tutorialhead">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_b1biQ1cspzClA_8K6EMv1nWkGMfRHhzDCQ&usqp=CAU">
-    <h1>CODE schoolz</h1>
+    <img style="height: 38px; width: 38px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_b1biQ1cspzClA_8K6EMv1nWkGMfRHhzDCQ&usqp=CAU">
+    <h1 class="h1t">CODE schoolz</h1>
+    <ul class="ult">
+        <li> <a class="lit" style="border-right: 1px solid #fffdfd;" href="homepage.html">Home</a></li>
+        <li> <a class="lit" style="border-right: 1px solid #fffdfd;" href="tutorial.html">Tutorials</a></li>
+        <li> <a class="lit" style="border-right: 1px solid #fffdfd;" href="#">Test page</a></li>
+        <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lit" href="#">Login</a></li>
+         <li> <a class="lit" href="aboutus.html">About us</a></li>
+    </ul>
 </div>
-<center>
-    <hr class="hrt">
-</center>
-<ul class="ult">
-    <li> <a style="border-right: 1px solid #fffdfd;" href="homepage.html">Home</a></li>
-    <li> <a style="border-right: 1px solid #fffdfd;" href="tutorial.html">Tutorials</a></li>
-    <li> <a style="border-right: 1px solid #fffdfd;" href="#">Test page</a></li>
-    <li style="border-right: 1px solid rgb(255, 255, 255);"><a href="#">Login</a></li>
-     <li> <a href="aboutus.html">About us</a></li>
-</ul>
 </div>
+<hr style="color: #fffdfd; padding: 0%; margin: 0%;">
 <div class="tutorialbody">
-<div class="tabd">
-<a href="#" class="tab tcolor1" >Introduction</a>
-<a href="#" class="tab tcolor2" >Definition</a>
-<a href="#" class="tab tcolor3" >HTML Basic</a>
-<a href="#" class="tab tcolor4" >HTML Tags</a>
-<a href="#" class="tab tcolor5" >HTML Form</a>
-<a href="#" class="tab tcolor5" >HTML Media</a>
-<a href="#" class="tab tcolor6" >HTML Graphic</a>
-<a href="#" class="tab tcolor7"  >HTML References</a>
-<a href="#" class="tab tcolor8" >HTML Test</a>
+<a href="#" class="tab" >Introduction</a>
+
+<a href="#" class="tab" >Definition</a>
+
+<a href="#" class="tab" >HTML Basic</a>
+
+<a href="#" class="tab" >HTML Tags</a>
+
+<a href="#" class="tab" >HTML Element</a>
+
+<a href="#" class="tab" >HTML Form</a>
+
+<a href="#" class="tab" >HTML Media</a>
+
+<a href="#" class="tab" >HTML Graphic</a>
+
+<a href="#" class="tab"  >HTML References</a>
+
+<a href="#" class="tab" >HTML div</a>
+
+<a href="#" class="tab" >HTML classes</a>
+
+<a href="#" class="tab" >HTML Media</a>
+
+<a href="#" class="tab" >HTML Examples</a>
 </div>
-</div>
+
 </body>
