modified and adding js file

--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
 	<br>
 	<p class="pa">CODE schoolz is optimized for learning and training. Examples might be simplified to improve reading and learning.
 		Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness
-		of all content. While using W3Schools, you agree to have read and accepted our <a class="terms" href="#" >terms of use, cookie and privacy policy.</a>
+		of all content. While using W3Schools, you agree to have read and accepted our <a id="popup-link"  class="terms" href="#" >terms of use, cookie and privacy policy.</a>
 	</p>
 	<p class="pa2">Copyright 1999-2024 by @ Data. All Rights Reserved. CODE Schoolz is Powered by CODE Schoolz.CSS.</p>
 	<br>
@@ -42,13 +42,26 @@
 		<li><a class="liaa" href="homepage.html"> Home</a></li>
 	    <li><a class="liaa" href="tutorial.html">Tutorials</a></li>
 		<li><a class="liaa" href="#">Testpage</a></li>
-		<li><a class="liaa" href="#">Login</a></li>
+		<li><a class="liaa" href="#">Paid courses</a></li>
 		<li><a class="liaa" href="aboutus.html">About us</a></li>
 	   </ul>
-   
+	   <div id="popup" class="popup">
+		<div class="popup-content">
+		  <span class="close" id="close-popup">&times;</span>
+		</div>
+		<p>
+			<b>Terms and Conditions</b>
+			<br>
+			Welcome to our learning website! By using our services, you agree to these terms. Please read them carefully.
+			<br>
+			1.<b>Use of Materials</b>: Our website provides educational resources for personal use. You may not distribute or modify our content without permission.
+			<br>
+			2.<b>Responsibility</b>: While we strive for accuracy, we can't guarantee it. Use the information at your own risk, and consult professionals for specific advice.
+			<br>
+			Thank you for being part of our learning community!</p>
 
-	
-	
-	
+			<input type="checkbox" id="myCheckbox" name="myCheckbox"> I agree the terms of use, cookie and privacy policy.
+			<br>
+<script src="script.js"></script>
 </body>
 </html>
