--- a/homepage.html
+++ b/homepage.html
@@ -10,6 +10,10 @@
 <body>
 	<div class="bg9">
 		<div class="bg1">
+		<div class="topleft">		
+		<img class="fas" src="images/user.png">
+		<a class="login" href="#">Login</a>
+	</div>
 		<div class="headerpart">
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_b1biQ1cspzClA_8K6EMv1nWkGMfRHhzDCQ&usqp=CAU">
 		<h1>CODE schoolz</h1>
@@ -20,7 +24,8 @@
 	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lih" href="homepage.html"> Home</a></li>
 	<li style="border-right: 1px solid #fffdfd;"><a class="lih" href="tutorial.html">Tutorials</a></li>
      <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lih" href="#">Testpage</a></li>
-	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lih" href="#">Login</a></li>
+	 <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lih" href="#">Paid courses</a></li>
+	 
         <li><a class="lih" href="aboutus.html">About us</a></li>
 	</ul>
 
@@ -46,5 +51,14 @@ viewBox="0 0 100 100" preserveAspectRatio="none">
 	<path id="wavepath" d="M0,0  L110,0 C35,150 35,0 0,100 z" fill="#ffff"></path>
   </svg>
   
+  <a href="#" id="popup-link">Touch me to see popup</a>
+
+<div id="popup" class="popup">
+  <div class="popup-content">
+    <span class="close" id="close-popup">&times;</span>
+    <p>This is the popup content.</p>
+  </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
