--- a/tutorial.html
+++ b/tutorial.html
@@ -14,6 +14,7 @@
         <li> <a class="lit" style="border-right: 1px solid #fffdfd;" href="homepage.html">Home</a></li>
         <li> <a class="lit" style="border-right: 1px solid #fffdfd;" href="tutorial.html">Tutorials</a></li>
         <li> <a class="lit" style="border-right: 1px solid #fffdfd;" href="#">Test page</a></li>
+        <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lit" href="#">Paid courses</a></li>
         <li style="border-right: 1px solid rgb(255, 255, 255);"><a class="lit" href="#">Login</a></li>
          <li> <a class="lit" href="aboutus.html">About us</a></li>
     </ul>
