--- a/homepage.html
+++ b/homepage.html
@@ -41,24 +41,15 @@
  	<button type="submit" class="button">Go</button>
  </form></center>
 </div>
-<center><a class="link" href="#">Don't know where to start?</a></center>
+<center><a class="link" href="tutorial.html">Don't know where to start?</a></center>
 <br>
 <br>
 <br>
 </div>
 <svg style="background-color:#076b56;" width="100%" height="30%" 
 viewBox="0 0 100 100" preserveAspectRatio="none">
-	<path id="wavepath" d="M0,0  L110,0 C35,150 35,0 0,100 z" fill="#ffff"></path>
+<path id="wavepath" d="M0,0  L110,0 C35,150 35,0 0,100 z" fill="#ffff"></path>
   </svg>
-  
-  <a href="#" id="popup-link">Touch me to see popup</a>
 
-<div id="popup" class="popup">
-  <div class="popup-content">
-    <span class="close" id="close-popup">&times;</span>
-    <p>This is the popup content.</p>
-  </div>
-</div>
-<script src="script.js"></script>
 </body>
 </html>
