--- a/tutorial.html
+++ b/tutorial.html
@@ -22,9 +22,9 @@
 </div>
 <hr style="color: #fffdfd; padding: 0%; margin: 0%;">
 <div class="tutorialbody">
-<a href="introduction.html" class="tab" >Introduction</a>
+<a href="#" class="tab" onclick="loadPage('introduction.html')">Introduction</a>
 
-<a href="#" class="tab" >Definition</a>
+<a href="#" class="tab"onclick="loadPage('definition.html')">Definition</a>
 
 <a href="#" class="tab" >HTML Basic</a>
 
@@ -44,11 +44,13 @@
 
 <a href="#" class="tab" >HTML classes</a>
 
-<a href="#" class="tab" >HTML Media</a>
+<a href="#" class="tab" >HTML MCQ</a>
 
 <a href="#" class="tab" >HTML Examples</a>
 </div>
 <br>
+<iframe id="iframei" class="iframei" src="" width="1105" height="560" title="introduction">
+</iframe>
 
-
+<script src="script.js"></script>
 </body>
